Bug 367685 - Toggle application launcher on meta key
Summary: Toggle application launcher on meta key
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR minor
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
: 369044 370721 371821 372356 372477 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-22 18:28 UTC by supaiku
Modified: 2021-03-31 07:20 UTC (History)
15 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description supaiku 2016-08-22 18:28:37 UTC
It's finally there - the meta key support!
Thanks for that, Martin.

I ran the Neon unstable git iso from 21.08.16 and noticed that the application launcher only opens when the meta key is pressed, but doesn't close when pressed again. This behaviour is a bit unexpected.

Reproducible: Always

Steps to Reproduce:
1. Press meta key
2. Application launcher opens
3. Press again


Actual Results:  
It stays open.

Expected Results:  
The application launcher should toggle.
Comment 1 Thomas Lübking 2016-08-23 11:03:29 UTC
This belongs to either plasma-desktop (kickoff) or krunner. Maybe kglobalaccel if some default binding is provided but certainly not kwin ;-)
Comment 2 Martin Flöser 2016-08-24 05:38:40 UTC
It toggles with appdashboard, so kicker and kickoff need to implement toggle.
Comment 3 Christoph Feck 2016-09-25 01:38:17 UTC
*** Bug 369044 has been marked as a duplicate of this bug. ***
Comment 4 Peter Wu 2016-10-05 11:13:02 UTC
After an upgrade to Plasma 5.8 on Arch Linux, I noticed that pressing Meta gives the Kickoff menu and indeed, pressing it again does not hide it. Previously one could already use Alt+F1 to toggle the menu.

The new "Meta" shortcut gives:
method call time=1475665148.784542 sender=:1.18 -> destination=org.kde.plasmashell serial=488 path=/PlasmaShell; interface=org.kde.PlasmaShell; member=activateLauncherMenu

while the "Alt+F1" shortcut results in:
signal time=1475665160.428196 sender=:1.14 -> destination=(null destination) serial=636 path=/component/plasmashell; interface=org.kde.kglobalaccel.Component; member=globalShortcutPressed
   string "plasmashell"
   string "activate widget 196"
   int64 3600500

For some reason the Meta binding also tends to disable itself after some activity. That is, after logging in, the Meta buttons shows the Kickoff menu. After "some activity" (nothing special, I don't know the trigger), the Meta button has no longer effect.

Personally I will probably be disabling this Meta shortcut since it is used as modifier for many keybindings, just reporting it here in case it helps.

FYI, the commit adding this feature is:
https://quickgit.kde.org/?p=kwin.git&a=commitdiff&h=9b30cfef1d212ed2b40510a70d1f92c497f44398&hp=eed4bf32ae04ff445d4c542366b44b7b12a915a5
Comment 5 David Edmundson 2016-10-16 10:29:06 UTC
*** Bug 370721 has been marked as a duplicate of this bug. ***
Comment 6 Roman Gilg 2016-10-19 17:09:26 UTC
Git commit 65706d3878d556c7a1eac18984ec41b1a1d96d56 by Roman Gilg.
Committed on 19/10/2016 at 16:51.
Pushed by romangilg into branch 'master'.

New bool to use activated signal as toggle of expanded

The launcher applets couldn't be closed with Meta alone and on Wayland
in general by any global shortcut, since we used for that the focusOutEvent
triggered only on X and only on global shortcuts (on default Alt+F1).

This patch introduces the new bool activationTogglesExpanded, which allowes
QML applets to decide if they wish to use the activated signal also to end
their expanded state.

The default value is false, in order to not break any legacy applets.

REVIEW: 129204

M  +16   -1    src/plasmaquick/appletquickitem.cpp
M  +10   -0    src/plasmaquick/appletquickitem.h
M  +1    -0    src/plasmaquick/private/appletquickitem_p.h
M  +7    -2    src/scriptengines/qml/plasmoid/appletinterface.cpp

http://commits.kde.org/plasma-framework/65706d3878d556c7a1eac18984ec41b1a1d96d56
Comment 7 Christoph Feck 2016-10-29 13:47:48 UTC
*** Bug 371821 has been marked as a duplicate of this bug. ***
Comment 8 atmarx 2016-10-29 14:12:09 UTC
Any idea if this will also affect how the meta key works in keyboard-captured programs (like TeamViewer or VirtualBox)?

As of right now, meta+{key} combos are captured properly and don't trigger bound shortcuts on the host, but a meta key press by itself causes the app launcher to pop up as well as triggering it on the remote system / vm.
Comment 9 Martin Flöser 2016-10-29 14:35:11 UTC
(In reply to atmarx from comment #8)
> As of right now, meta+{key} combos are captured properly and don't trigger
> bound shortcuts on the host, but a meta key press by itself causes the app
> launcher to pop up as well as triggering it on the remote system / vm.

Please report a bug about that against product kwin
Comment 10 Peter Wu 2016-11-08 23:11:29 UTC
For future tracking: atmarx reported bug 371821 which covers this bug and the issue with the menu still opening even if an application grabbed it. The latter issue is tracked by bug 371877.
Comment 11 Christoph Feck 2016-11-15 08:47:28 UTC
*** Bug 372477 has been marked as a duplicate of this bug. ***
Comment 12 Christoph Feck 2016-11-15 09:08:38 UTC
*** Bug 372356 has been marked as a duplicate of this bug. ***